--- a/style/style.css
+++ b/style/style.css
@@ -98,7 +98,13 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
   transform: perspective(600px) rotateY(180deg);
-  transition: transform .3s ease-in-out, color .3s ease-in-out, background-color .3s ease-in-out, background-image .3s ease-in-out;
+  transition: transform .3s ease-in-out, color .3s ease-in-out, background-color .3s ease-in-out, background-image 0.3s ease-in-out;
+}
+
+.card__img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .card:hover {
@@ -107,7 +113,6 @@ body {
 
 .card.open {
   transform: perspective(600px) rotateY(0deg);
-  background-image: url(../img/bh.jpg);
   background-color: aqua;
   color: #e80a0a;
 }
@@ -116,6 +121,12 @@ body {
   background-color: #59b84b;
   color: #ee5509;
   transform: scale(0.9) perspective(600px) rotateY(0deg);;
+}
+
+.card__img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .game__menu {
